--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,22 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+TC&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-#bg {
-  background-color: red;
+.inter-<uniquifier > {
+  font-family: 'Inter', serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
 
-.inter-<uniquifier> {
-  font-family: "Inter", serif;
+@layer utilities {
+  .font-google-sans-code {
+    font-family: 'Google Sans Code', monospace;
+  }
+
+  .font-inter {
+    font-family: 'Inter', sans-serif;
+  }
+
+  .font-lubrifont {
+    font-family: 'WDXL Lubrifont TC', sans-serif;
+  }
+}
+
+.google-sans-code-<uniquifier > {
+  font-family: 'Google Sans Code', monospace;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
 }
 
 body {
-  font-family: "Inter", serif;
+  font-family: 'Inter', monospace;
+}
+
+#contextmenu,
+#regulator {
+  font-family: 'Google Sans Code', monospace !important;
 }
 
 :root {
@@ -106,8 +131,6 @@ body {
     @apply bg-background text-foreground;
   }
 }
-
-
 
 @layer base {
   * {
